--- a/new_bandit.tex
+++ b/new_bandit.tex
@@ -1,4 +1,4 @@
-\chapter{The New Bandit Technique}
+\chapter{The New Multimodal Optimization Technique}
 \label{chapter:new_bandit}
 
 In this chapter, we illustrate the proposed algorithm step-by-step. 
