--- a/thesis.bib
+++ b/thesis.bib
@@ -160,4 +160,32 @@
     organization={Springer}
 }
 
+@incollection{ Robbins:1985:MAB,
+    title={Some aspects of the sequential design of experiments},
+    author={Robbins, Herbert},
+    booktitle={Herbert Robbins Selected Papers},
+    pages={169--177},
+    year={1985},
+    organization={Springer}
+}
 
+@inproceedings{ Vermorel:2005:MAB,
+    title={Multi-armed bandit algorithms and empirical evaluation},
+    author={Vermorel, Joannes and Mohri, Mehryar},
+    booktitle={ECML},
+    volume={3720},
+    pages={437--448},
+    year={2005},
+    organization={Springer}
+}
+
+
+@article{ Suganthan:2005:benchmark,
+    author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-Ping and Auger, Anne and Tiwari, Santosh},
+    title={Problem definitions and evaluation criteria for the CEC 2005 special session on real-parameter optimization},
+    journal={KanGAL report},
+    volume={2005005},
+    pages={2005},
+    year={2005},
+    publisher={Nanyang Technological University Singapore}
+}
