--- a/introduction.tex
+++ b/introduction.tex
@@ -76,7 +76,8 @@ These three algorithms each have different characteristics due to different unde
 Then the projective transformation and homogeneous coordinate are presented.
 
 
-\textbf{Chapter~\ref{chapter:MAB}} briefly describes some common multi-armed bandit algorithms, including ...
+\textbf{Chapter~\ref{chapter:MAB}} first describes the Multi-armed Bandit Algorithm, 
+followed by a brief introduction of some common MAB algorithms, including ...
 Then we present our new bandit techniques.
 Tranditional bandit algorithms focus on minimizing regret, while our new bandit focus on the probability of getting a rank 1 result.
 
