--- a/old_experiment.tex
+++ b/old_experiment.tex
@@ -38,7 +38,7 @@ It is suggested to let the global optimum be within three sigma~\cite{Hansen:200
 
 As for th SPSO 2011, there are currently no official Python implementation, 
 so we created our own Python implementation according to the tutorials~\cite{Clerc:2012:SPSO2011}~\cite{Clerc:2007:randomTopology},
-and the official C++ code~\footnote{https://www.particleswarm.info/standard\_pso\_2011\_c.zip} provided Clerc.
+and the official C++ code~\footnote{https://www.particleswarm.info/standard\textunderscorepso\textunderscore2011\textunderscorec.zip} provided Clerc.
 The population size is set to be 40 as suggested in~\cite{Clerc:2012:SPSO2011}.
 The parameters $c = \frac{1}{2} + \ln(2) \simeq 1.193$ and $w = \frac{1}{2\ln(2)} \simeq 0.721$ are also set as default.
 We implement the random topology with $K = 3$,
