--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,31 +2,29 @@
 \label{chapter:conclusion}
 
 
-%\section{Test Problems}
+%\section{Test Problems} 
 Contribution:
-find potential region to search
+
+find potential \textit{fitness hills} in a real-valued multimodal problem by hierarchical clustering and Minimum Descriptioni Length.
+Unlike K-Means clustering that only considers spatial density and requires user-defined number of clusters, or other techniques to help determine the number of clusters, 
+the hierarchical clustering process intrinsically captures the unimodal by considering the fitness values.
+Later, combining with the MDL, our clustering technique can automatically detect potential unimodals.
+
+define non-overlapping ROIs with well-defined boundaries that isolates and enhance potential unimodals.
+This allows the alogrithms to search the a smaller portion of the landscape which should only consists of one unimodal in the projected subspace.
 allocate resources
 
 Weakness:
 Potentially more NFE on unimodals and moving regions.
+Sometimes still unstable.
 Requires a better clustering techniques to identify underlying unimodals.
 
 
 Future work:
+A linkage tree attemp to create clusters.
+A better way to delete arms
 Non-linear transformation
 
 
 
-Attention plays an important role in human vision. For example, when
-we look at an image, our eye movements comprise a succession of {\em
-fixations} (repetitive positioning of eyes to parts of the image)
-and {\em saccades} (rapid eye jump). Those parts of the image that
-cause eye fixations and capture primary attention are called {\em
-regions of interest} (ROIs). Studies in visual attention and eye
-movement have shown that humans generally only attend to a few ROIs.
-Detecting these visually attentive regions in images is challenging
-but useful in many multimedia applications, such as automatic
-thumbnail cropping, object recognition, content-based image
-retrieval, adaptive image compression and automatic browsing in
-small-screen devices.
 
