--- a/experiments.tex
+++ b/experiments.tex
@@ -22,6 +22,7 @@ Further speedup and studies to expend the technique on higher dimension are need
 We show the average and median error plots for all 25 problems in the following section.
 The tables, following the requested format in~\cite{Suganthan:2005:benchmark}, are also given the the following section.  
 
+
 \section{Experiment Settings}
 
 In this section, we breifly describe the parameters setting for CMA-ES, SPSO and ACOR.
@@ -30,20 +31,21 @@ We use the \textit{Covariance Matrix Adaptation Evolution Strategy for non-linea
 Although the default population for CMA-ES in $D$-dimension is set to be $4 + \lfloor3\log(D)\rfloor$, meaning default population size is 6 in 2D,
 we found out that we a larger population for the MDL to not merge every particles into one cluster.
 Therefore, we set the population size as 30 for CMA-ES.
-The initial mean is set to be the center between max bounds and min bounds $(max_d + min_d)/2$ in every dimension.
+The initial mean is set to be the center between max bounds and min bounds in every dimension.
+The initial sigma is set to be one sixth of the maximum length between max bounds and min bounds in each dimension. 
+It is suggested to let the global optimum be within three sigma~\cite{Hansen:2006:CMA_ES_review}.
 
-\section{Experiment Settings}
-
-Describe the parameters setting for CMA-ES, SPSO and ACOR.
-
-We use the \textit{Covariance Matrix Adaptation Evolution Strategy for non-linear numerical optimization in Python} package~\footnote{https://pypi.python.org/pypi/cma} provided by Hensen, the author of CMA-ES.
-CMA-ES initial mean and std, population settings.
-
-SPSO2011 parameters (c, w) settings, and population settings.
+As for th SPSO 2011, there are currently no official Python implementation, 
+so we created our own Python implementation according to the tutorials~\cite{Clerc:2012:SPSO2011},
+and the official SPSO 2011 C++ code~\footnote{https://www.particleswarm.info} provided Clerc.
+The population size is set to be 40 as suggested in~\cite{Clerc:2012:SPSO2011}.
+The parameters $c = \frac{1}{2} + \ln(2) \simeq 1.193$ and $w = \frac{1}{2\ln(2)} \simeq 0.721$ are also set as default.
+We implement the random topology with $K = 3$,
+and update the topology at the beginning and in every iteration when the best fitness does not improve.
+Also, we use the ``bounce back'' boundary condition suggested in~\cite{Clerc:2012:SPSO2011}, which is also described in Chapter~\ref{chapter:algos}.
 
 For ACOR, we set our parameters according to the original paper~\cite{Socha:2008:ACOR}. 
 The parameters are shown in Table~\ref{table:ACOR_parameters}.
-
 
 \begin{table}%[t!]
 \centering
@@ -59,5 +61,6 @@ Archive size                     & $k$      & $50$           \\ \hline
 \caption{Summary of the parameters used by $ACO_R$}
 \end{table}
 
+%Describe our bandit parameters setting, including the initial population, maximum number of arms, and (1+1)-ES step size.
 
-Describe our bandit parameters setting, including the initial population, maximum number of arms, and (1+1)-ES step size.
+\section{Experiment Results}
