--- a/thesis.bib
+++ b/thesis.bib
@@ -179,6 +179,13 @@
     organization={Springer}
 }
 
+@phdthesis{ Watkins:1989:eta,
+    title={Learning from delayed rewards},
+    author={Watkins, Christopher John Cornish Hellaby},
+    year={1989},
+    school={King's College, Cambridge}
+}
+
 
 @article{ Suganthan:2005:benchmark,
     author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-Ping and Auger, Anne and Tiwari, Santosh},
