--- a/thesis.bib
+++ b/thesis.bib
@@ -186,6 +186,19 @@
     school={King's College, Cambridge}
 }
 
+@book{ Luce:1959:softmax,
+    title={Individual Choice Behavior a Theoretical Analysis},
+    author={R.. Ducan Luce},
+    year={1959},
+    school={John Wiley and sons}
+}
+
+@book{ Kaelbling:1993:interval_estimation,
+    title={Learning in embedded systems},
+    author={Kaelbling, Leslie Pack},
+    year={1993},
+    school={MIT press}
+}
 
 @article{ Suganthan:2005:benchmark,
     author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-Ping and Auger, Anne and Tiwari, Santosh},
